# curve_fitting

./: CMakeLists.txt  LICENSE  README.md
samples/: CMakeLists.txt  fit_demo.cpp
src/: CMakeLists.txt  augmentedmatrix.cpp  augmentedmatrix.h  linearfit.cpp  linearfit.h  polynomialfit.cpp  polynomialfit.h
